--- a/index.css
+++ b/index.css
@@ -1,3 +1,23 @@
+@keyframes loader {
+  100% {
+    opacity: 0;
+    z-index: -10;
+  }
+}
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  25% {
+    transform: translateY(0.5rem);
+  }
+  75% {
+    transform: translateY(-0.5rem);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
 body {
   margin: 0;
 }
@@ -14,6 +34,89 @@ body {
   font-family: "Roboto", sans-serif;
   font-style: normal;
   line-height: normal;
+}
+
+.loader {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  background-color: hsla(0, 0%, 100%, 0.9);
+  animation: loader 0.01s;
+  animation-delay: 1.75s;
+  animation-fill-mode: both;
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader__itemContainer {
+  display: flex;
+  width: 5rem;
+  justify-content: space-between;
+}
+
+.loader__item {
+  height: 1rem;
+  width: 1rem;
+  border-radius: 1rem;
+  animation: jump 1s;
+  animation-iteration-count: 1;
+}
+
+.loader__item--2 {
+  background-color: #ff79da;
+  animation-delay: 0.25s;
+}
+
+.loader__item--3 {
+  background-color: #99e2d0;
+  animation-delay: 0.5s;
+}
+
+.loader__item--1 {
+  background-color: #9356dc;
+}
+
+.restaurants__cardlike {
+  display: flex;
+  align-items: center;
+}
+.restaurants__cardlike .restaurants__like {
+  position: relative;
+  font-size: 25px;
+}
+.restaurants__cardlike .restaurants__like::before {
+  background: black;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.restaurants__cardlike .restaurants__like:hover {
+  opacity: 0;
+}
+.restaurants__cardlike .restaurants__likehover {
+  position: absolute;
+  opacity: 0;
+}
+.restaurants__cardlike .restaurants__likehover::before {
+  font-size: 25px;
+  background: -webkit-linear-gradient(90deg, #9356dc, #ff79da);
+  transition: 250ms;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.restaurants__cardlike .restaurants__likehover:hover {
+  font-size: 25px;
+  background: -webkit-linear-gradient(90deg, #9356dc, #ff79da);
+  transition: 250ms;
+  opacity: 1;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .recherche__button {
