--- a/index.css
+++ b/index.css
@@ -4,6 +4,14 @@
     z-index: -10;
   }
 }
+@keyframes itemAppear {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 @keyframes jump {
   0% {
     transform: translateY(0);
@@ -15,6 +23,18 @@
     transform: translateY(-0.5rem);
   }
   100% {
+    transform: translateY(0);
+  }
+}
+@keyframes menu-listes {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 }
@@ -89,7 +109,7 @@ body {
   font-size: 25px;
 }
 .restaurants__cardlike .restaurants__like::before {
-  background: black;
+  background: #000;
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
@@ -110,6 +130,45 @@ body {
   color: transparent;
 }
 .restaurants__cardlike .restaurants__likehover:hover {
+  font-size: 25px;
+  background: -webkit-linear-gradient(90deg, #9356dc, #ff79da);
+  transition: 250ms;
+  opacity: 1;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+.menu__cardlike {
+  display: flex;
+  align-items: center;
+}
+.menu__cardlike .menu__like {
+  position: relative;
+  font-size: 25px;
+}
+.menu__cardlike .menu__like::before {
+  background: #000;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.menu__cardlike .menu__like:hover {
+  opacity: 0;
+}
+.menu__cardlike .menu__likehover {
+  position: absolute;
+  opacity: 0;
+}
+.menu__cardlike .menu__likehover::before {
+  font-size: 25px;
+  background: -webkit-linear-gradient(90deg, #9356dc, #ff79da);
+  transition: 250ms;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.menu__cardlike .menu__likehover:hover {
   font-size: 25px;
   background: -webkit-linear-gradient(90deg, #9356dc, #ff79da);
   transition: 250ms;
@@ -460,6 +519,166 @@ nav .nav__localisation {
   color: #000;
   font-size: 17px;
   font-weight: 300;
+}
+
+.menu {
+  border-radius: 40px 40px 0 0;
+  background-color: #f6f6f6;
+  position: relative;
+  margin-top: -50px;
+  padding: 5px 20px;
+}
+@media screen and (min-width: 1024px) {
+  .menu {
+    padding: 5px 170px;
+    margin: -50px 170px 0;
+  }
+}
+.menu .menu__container {
+  margin: auto;
+  max-width: 1440px;
+  padding-top: 20px;
+}
+.menu .menu__header {
+  font-family: "Shrikhand", cursive;
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (min-width: 1024px) {
+  .menu .menu__header {
+    justify-content: center;
+    gap: 20px;
+  }
+}
+.menu .menu__listes {
+  flex-direction: column;
+  padding-bottom: 40px;
+  gap: 15px;
+  display: flex;
+}
+.menu .menu__liste {
+  width: 100%;
+}
+.menu h3 {
+  font-size: 16px;
+  font-weight: 300;
+  text-transform: uppercase;
+  position: relative;
+  margin: 20px 0 22px 6px;
+}
+.menu h3::after {
+  content: "";
+  width: 40px;
+  height: 3px;
+  background-color: #99e2d0;
+  position: absolute;
+  left: 0;
+  top: 24px;
+}
+.menu .menu__platcard {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 15.043px;
+  background: #fff;
+  box-shadow: 0px 4.01149px 15.0431px 0px rgba(0, 0, 0, 0.1);
+  align-items: flex-end;
+  padding: 15px;
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+  margin: 0 15px 15px 0;
+  -webkit-animation: menu-listes 1s ease both;
+  animation: menu-listes 1s ease both;
+}
+.menu .menu__platcard:hover .menu__cardorder {
+  transform: translateX(0px);
+  transition: 0.5s ease-in-out;
+}
+.menu .menu__platcard:hover .menu__cardprice {
+  margin-right: 60px;
+}
+.menu .menu__cardcontent {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.menu h4 {
+  margin: 0;
+  padding-bottom: 5px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.menu p {
+  margin: 0;
+  font-size: 0.85rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.menu .menu__cardprice {
+  font-weight: 700;
+  font-size: 14px;
+  color: #353535;
+  transition: 0.5s ease-in-out;
+}
+.menu .menu__cardorder {
+  position: absolute;
+  background-color: #99e2d0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 65px;
+  transform-origin: right 50%;
+  transform: translateX(65px);
+  overflow: hidden;
+  transition-duration: 0.5s;
+}
+.menu .menu__validation {
+  position: absolute;
+  left: 20px;
+  top: 25px;
+  font-size: 1.5rem;
+  color: #fff;
+  opacity: 1;
+}
+
+.Commander {
+  padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: "Roboto";
+  font-style: normal;
+  line-height: normal;
+}
+
+.menu__platcard:nth-child(1) {
+  -webkit-animation-delay: 0.3s;
+  animation-delay: 0.3s;
+}
+
+.menu__platcard:nth-child(2) {
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+}
+
+.menu__platcard:nth-child(3) {
+  -webkit-animation-delay: 0.9s;
+  animation-delay: 0.9s;
+}
+
+.menu__platcard:nth-child(4) {
+  -webkit-animation-delay: 1.2s;
+  animation-delay: 1.2s;
+}
+
+.menu__platcard:nth-child(5) {
+  -webkit-animation-delay: 1.5s;
+  animation-delay: 1.5s;
 }
 
 /*# sourceMappingURL=index.css.map */
