--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -5,6 +5,15 @@
   }
 }
 
+@keyframes itemAppear {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 @keyframes jump {
   0% {
     transform: translateY(0);
@@ -16,6 +25,19 @@
     transform: translateY(-0.5rem);
   }
   100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes menu-listes {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(5px);
+    transform: translateY(5px);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 }
