--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -48,7 +48,7 @@
       top: 24px;
     }
   }
-  .menu__platcard {
+  .menu__mealcard {
     display: flex;
     justify-content: space-between;
     border-radius: 15.043px;
@@ -119,7 +119,7 @@
   }
 }
 
-.Commander {
+.order {
   padding-bottom: 40px;
   display: flex;
   flex-direction: column;
@@ -130,23 +130,23 @@
   font-style: normal;
   line-height: normal;
 }
-.menu__platcard:nth-child(1) {
+.menu__mealcard:nth-child(1) {
   -webkit-animation-delay: 0.3s;
   animation-delay: 0.3s;
 }
-.menu__platcard:nth-child(2) {
+.menu__mealcard:nth-child(2) {
   -webkit-animation-delay: 0.6s;
   animation-delay: 0.6s;
 }
-.menu__platcard:nth-child(3) {
+.menu__mealcard:nth-child(3) {
   -webkit-animation-delay: 0.9s;
   animation-delay: 0.9s;
 }
-.menu__platcard:nth-child(4) {
+.menu__mealcard:nth-child(4) {
   -webkit-animation-delay: 1.2s;
   animation-delay: 1.2s;
 }
-.menu__platcard:nth-child(5) {
+.menu__mealcard:nth-child(5) {
   -webkit-animation-delay: 1.5s;
   animation-delay: 1.5s;
 }
