--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg) translateX(2.5rem) rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg) translateX(2.5rem) rotate(-360deg);
+  }
+}
 @keyframes loader {
   100% {
     opacity: 0;
@@ -10,20 +18,6 @@
   }
   100% {
     transform: scale(1);
-  }
-}
-@keyframes jump {
-  0% {
-    transform: translateY(0);
-  }
-  25% {
-    transform: translateY(0.5rem);
-  }
-  75% {
-    transform: translateY(-0.5rem);
-  }
-  100% {
-    transform: translateY(0);
   }
 }
 @keyframes menu-listes {
@@ -73,31 +67,35 @@ body {
 }
 
 .loader__itemContainer {
+  position: relative;
+  width: 6rem;
+  height: 6rem;
   display: flex;
-  width: 5rem;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
 
 .loader__item {
-  height: 1rem;
-  width: 1rem;
-  border-radius: 1rem;
-  animation: jump 1s;
-  animation-iteration-count: 1;
-}
-
-.loader__item--2 {
-  background-color: #ff79da;
-  animation-delay: 0.25s;
-}
-
-.loader__item--3 {
-  background-color: #99e2d0;
-  animation-delay: 0.5s;
+  position: absolute;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  animation: rotate 1.5s linear infinite;
 }
 
 .loader__item--1 {
   background-color: #9356dc;
+  animation-delay: 0s;
+}
+
+.loader__item--2 {
+  background-color: #ff79da;
+  animation-delay: 0.5s;
+}
+
+.loader__item--3 {
+  background-color: #99e2d0;
+  animation-delay: 1s;
 }
 
 .restaurants__cardlike {
