--- a/sass/abstracts/_loader.scss
+++ b/sass/abstracts/_loader.scss
@@ -15,25 +15,33 @@
 }
 
 .loader__itemContainer {
+  position: relative;
+  width: 6rem;
+  height: 6rem;
   display: flex;
-  width: 5rem;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
 }
+
 .loader__item {
-  height: 1rem;
-  width: 1rem;
-  border-radius: 1rem;
-  animation: jump 1s;
-  animation-iteration-count: 1;
+  position: absolute;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  animation: rotate 1.5s linear infinite;
 }
-.loader__item--2 {
-  background-color: $color-secondary;
-  animation-delay: 0.25s;
-}
-.loader__item--3 {
-  background-color: $color-tertiary;
-  animation-delay: 0.5s;
-}
+
 .loader__item--1 {
   background-color: $color-primary;
+  animation-delay: 0s;
+}
+
+.loader__item--2 {
+  background-color: $color-secondary;
+  animation-delay: 0.5s;
+}
+
+.loader__item--3 {
+  background-color: $color-tertiary;
+  animation-delay: 1s;
 }
